fix goal hours on mobile on team page #64

--- a/src/components/TeamProfileBlock/teamprofileblock.scss
+++ b/src/components/TeamProfileBlock/teamprofileblock.scss
@@ -37,7 +37,7 @@
 
         #team-goal-number {
             float: left;
-            width: 15%;
+            width: 18%;
             margin-left: 2%;
             position: relative;
             top: 4px;
